<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_red_light"
    tools:context="com.currencycalculate.CalculatorActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="134dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="97dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">

        <TextView
            android:id="@+id/doviz_tutari_txt"
            android:layout_width="87dp"
            android:layout_height="23dp"
            android:text="@string/doviz_tutari"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="29dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tl_tutari_txt"
            android:layout_width="87dp"
            android:layout_height="23dp"
            android:text="@string/tl_tutari"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginStart="2dp"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/doviz_tutari_txt"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/doviz_tutari_txt"
            android:layout_marginLeft="2dp" />

        <TextView
            android:id="@+id/virgul_txt"
            android:layout_width="11dp"
            android:layout_height="17dp"
            android:text="@string/virgul"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/doviz_tutari_edt2"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/doviz_tutari_edt2"
            app:layout_constraintHorizontal_bias="0.363"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/virgul2_txt"
            android:layout_marginBottom="33dp" />

        <EditText
            android:id="@+id/doviz_tutari_edt"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="false"
            tools:layout_constraintRight_creator="1"
            android:layout_marginEnd="120dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="120dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/doviz_tutari_edt2"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/tl_tutari_edt2"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/tl_tutari_edt2"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/doviz_birimi_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/usd"
            android:textColor="@android:color/white"
            android:layout_marginEnd="18dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/doviz_tutari_edt"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="@+id/doviz_tutari_edt2"
            app:layout_constraintLeft_toRightOf="@+id/doviz_tutari_edt2"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="18dp" />

        <EditText
            android:id="@+id/tl_tutari_edt"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="false"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/doviz_tutari_edt"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/doviz_tutari_edt" />

        <TextView
            android:id="@+id/virgul2_txt"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:text="@string/virgul"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/virgul_txt"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/virgul_txt" />

        <EditText
            android:id="@+id/tl_tutari_edt2"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="number"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintRight_toLeftOf="@+id/tl_txt"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/tl_tutari_edt"
            android:layout_marginLeft="2dp" />

        <TextView
            android:id="@+id/tl_txt"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:text="@string/tl"
            android:textColor="@android:color/white"
            android:layout_marginEnd="21dp"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/tl_tutari_edt2"
            tools:layout_constraintBaseline_creator="1"
            android:layout_marginRight="21dp" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:background="@android:color/holo_red_dark"
        android:shadowColor="@android:color/background_light"
        android:text="@string/calculate_button"
        android:textColor="@android:color/white"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="0dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/alis_satis_spn"
        android:entries="@array/spn_array"
        android:background="@android:color/white"
        android:layout_width="227dp"
        android:layout_height="57dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.089"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />


</android.support.constraint.ConstraintLayout>
